--- a/AdoptPets.API/appsettings.json
+++ b/AdoptPets.API/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AdoptPetsConnection": "Server=localhost;Port=5432;Database=AdoptPetsDB;User Id=postgres;Password=carina;",
-    "AdoptPetsUserConnection": "Server=localhost;Port=5432;Database=AdoptPetsUserDB;User Id=postgres;Password=carina;"
+    "AdoptPetsConnection": "Server=localhost;Port=5432;Database=AdoptPetsDB;User Id=postgres;Password=postgres;",
+    "AdoptPetsUserConnection": "Server=localhost;Port=5432;Database=AdoptPetsUserDB;User Id=postgres;Password=postgres;"
   },
   "EmailSettings": {
     "FromAddress": "carinasrb@yahoo.com",
