--- a/Application/AdoptPets.Application.csproj
+++ b/Application/AdoptPets.Application.csproj
@@ -18,4 +18,9 @@
     <ProjectReference Include="..\AdoptPets.Domain\AdoptPets.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Features\Users\Commands\UpdateUserInfo\" />
+    <Folder Include="Features\Users\Queries\" />
+  </ItemGroup>
+
 </Project>
