--- a/Application/AdoptPets.Application.csproj
+++ b/Application/AdoptPets.Application.csproj
@@ -7,13 +7,26 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AWSSDK.S3" Version="3.7.308.9" />
-    <PackageReference Include="FluentValidation" Version="11.9.1" />
-    <PackageReference Include="MediatR" Version="12.2.0" />
+    <Compile Remove="Features\Users\Commands\**" />
+    <Compile Remove="Features\Users\Queries\**" />
+    <EmbeddedResource Remove="Features\Users\Commands\**" />
+    <EmbeddedResource Remove="Features\Users\Queries\**" />
+    <None Remove="Features\Users\Commands\**" />
+    <None Remove="Features\Users\Queries\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Aspose.Cells" Version="24.5.0" />
+    <PackageReference Include="AWSSDK.S3" Version="3.7.309.2" />
+    <PackageReference Include="FluentValidation" Version="11.9.2" />
+    <PackageReference Include="MediatR" Version="12.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.1" />
+    <PackageReference Include="Microsoft.ML" Version="3.0.1" />
+    <PackageReference Include="Microsoft.ML.Vision" Version="3.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.6.2" />
+    <PackageReference Include="System.Drawing.Common" Version="8.0.6" />
   </ItemGroup>
 
   <ItemGroup>
@@ -21,8 +34,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Features\Users\Commands\UpdateUserInfo\" />
-    <Folder Include="Features\Users\Queries\" />
+    <Folder Include="ML\" />
   </ItemGroup>
 
 </Project>
